<resources>
    <string name="app_name">Śpiewnik</string>
    <string name="confirm">Zapisz</string>
    <string name="cancel">Cofnij</string>
    <string name="find">Szukaj</string>
    <string name="all">Wszystko</string>
    <string name="parts">Część mszy</string>
    <string name="short_songs">Krótka</string>
    <string name="long_songs">Długa</string>
    <string name="main">Strona główna</string>
    <string name="information">Informacje</string>
    <string name="options">Ustawienia</string>
    <string name="random_song">Wylosuj pieśń</string>
    <string name="help_project">Wesprzyj projekt, oceń Śpiewnik!</string>
    <string name="main_information">O aplikacji</string>
    <string name="made_by_flynid">Stworzona przez FlyNid</string>
    <string name="waladarka">Sanktuarium Matki Bożej Królowej Jezior</string>
    <string name="braslaw">Brasław</string>
    <string name="year">2025</string>
    <string name="connection">Kontakt</string>
    <string name="mail">ntnlbk@gmail.com</string>
    <string name="update_is_available">Dostępna nowa wersja aplikacji!</string>
    <string name="please_update">Proszę, uaktualnij aplikację.</string>
    <string name="update">Aktualizuj</string>
    <string name="skip_update">Pomiń aktualizację</string>
    <string name="show_chords">Wyświetlaj akordy</string>
    <string name="transpose">Transponuj</string>
    <string name="change_chords_color">Zmień kolor akordów</string>
    <string name="dark_theme">Tryb ciemny</string>
    <string name="text_size">Rozmiar czcionki</string>
    <string name="accept">Zapisz</string>
    <string name="app_name_menu">Śpiewnik</string>
    <string name="carols">Kolęda</string>
    <string name="added_from">Dodano dzięki FMO – Franciszkańska Młodzież Oazowa</string>
    <string name="fmo_about">Za pośrednictwem śpiewnika FMO\nFranciszkańska Młodzież Oazowa</string>
    <string name="back_button_content_description">Back button</string>
    <string name="flynid_logo_content_description">flynid logo</string>
    <string name="fmo_logo_content_description">FMO logo</string>
    <string name="options_button_content_description">options button</string>
</resources>