<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/C1">

    <ImageButton
        android:id="@+id/about_us_back_btn"
        android:layout_width="82dp"
        android:layout_height="71.57dp"
        android:background="#00FFFFFF"
        android:paddingStart="32dp"
        android:paddingTop="24.42dp"
        android:paddingEnd="30dp"
        android:paddingBottom="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/yellow_back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/information_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/myfont"
        android:text="@string/information"
        android:textColor="@color/C2"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_us_back_btn" />

    <TextView
        android:id="@+id/main_information_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/myfont"
        android:text="@string/main_information"
        android:textColor="@color/C2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/information_tv" />

    <TextView
        android:id="@+id/made_by_flynid_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/myfont"
        android:text="@string/made_by_flynid"
        android:textColor="@color/C2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_information_tv" />

    <ImageView
        android:id="@+id/flynid_icon_iv"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toEndOf="@id/made_by_flynid_tv"
        app:layout_constraintTop_toBottomOf="@id/main_information_tv"
        app:srcCompat="@drawable/flynid" />

    <TextView
        android:id="@+id/waladarka_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/myfont"
        android:text="@string/waladarka"
        android:textColor="@color/C2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/made_by_flynid_tv" />

    <TextView
        android:id="@+id/braslaw_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:fontFamily="@font/myfont"
        android:text="@string/braslaw"
        android:textColor="@color/C2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waladarka_tv" />

    <TextView
        android:id="@+id/year_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:fontFamily="@font/myfont"
        android:text="@string/year"
        android:textColor="@color/C2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/braslaw_tv" />

    <TextView
        android:id="@+id/connection_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/myfont"
        android:text="@string/connection"
        android:textColor="@color/C2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year_tv" />

    <TextView
        android:id="@+id/mail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:fontFamily="@font/myfont"
        android:text="@string/mail"
        android:textColor="@color/C2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connection_tv" />

    <Button
        android:id="@+id/help_project_btn"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@color/yellow"
        android:fontFamily="@font/myfont"
        android:text="@string/help_project"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>