<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00E5E5E5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/C1">


        <ImageButton
            android:id="@+id/menubtn"
            android:layout_width="75dp"
            android:layout_height="87dp"
            android:layout_alignParentStart="true"
            android:background="@color/C1"
            android:paddingStart="32dp"
            android:paddingTop="37dp"
            android:paddingEnd="19dp"
            android:paddingBottom="27.5dp"
            android:scaleType="fitXY"
            ads:layout_constraintBottom_toTopOf="@+id/types"
            ads:layout_constraintEnd_toStartOf="@+id/search_et"
            ads:layout_constraintHorizontal_bias="0.0"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent"
            ads:layout_constraintVertical_bias="0.0"
            ads:srcCompat="@drawable/menu_icon" />

        <EditText
            android:id="@+id/search_et"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="80dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/et_style"
            android:drawableEnd="@drawable/search_icon"
            android:ems="10"
            android:fontFamily="@font/myfont"
            android:hint="@string/find"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="8dp"
            android:textColor="@color/C2"
            android:textColorHint="@color/C2"
            android:textSize="14sp"
            android:textStyle="bold"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintHorizontal_bias="0.0"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/types"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/search_et"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:scrollbarSize="0dp"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/search_et">

            <LinearLayout
                android:id="@+id/types_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/all_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="44dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/myfont"
                    android:text="@string/all"
                    android:textColor="@color/C2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/parts_of_mess_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="44dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/myfont"
                    android:text="@string/parts"
                    android:textColor="@color/C4"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/short_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="44dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/myfont"
                    android:text="@string/short_songs"
                    android:textColor="@color/C4"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/long_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="44dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/myfont"
                    android:text="@string/long_songs"
                    android:textColor="@color/C4"
                    android:textSize="16sp" />

            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintHorizontal_bias="0.0"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/types"
            ads:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/song_item" />

        <ProgressBar
            android:id="@+id/listProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nav_view_constrain_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/C1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="51dp"
                android:layout_marginTop="47dp"
                ads:srcCompat="@drawable/icon"
                ads:layout_constraintTop_toTopOf="@id/nav_view_constrain_layout"
                ads:layout_constraintLeft_toLeftOf="@id/nav_view_constrain_layout"/>

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:fontFamily="@font/myfont"
                android:text="@string/app_name_menu"
                android:textColor="@color/C2"
                android:textSize="17sp"
                ads:layout_constraintEnd_toEndOf="@id/nav_view_constrain_layout"
                ads:layout_constraintHorizontal_bias="0.08"
                ads:layout_constraintStart_toEndOf="@id/imageView"
                ads:layout_constraintTop_toTopOf="@id/nav_view_constrain_layout" />

            <TextView
                android:id="@+id/main_tv"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                ads:layout_constraintTop_toBottomOf="@id/imageView"
                ads:layout_constraintStart_toStartOf="@id/nav_view_constrain_layout"
                android:layout_marginStart="60dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/myfont"
                android:text="@string/main"
                android:textColor="@color/C2"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/options_tv"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                ads:layout_constraintTop_toBottomOf="@id/main_tv"
                ads:layout_constraintStart_toStartOf="@id/nav_view_constrain_layout"
                android:layout_marginStart="60dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/myfont"
                android:text="@string/options"
                android:textColor="@color/C2"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/info_tv"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                ads:layout_constraintTop_toBottomOf="@id/options_tv"
                ads:layout_constraintStart_toStartOf="@id/nav_view_constrain_layout"
                android:layout_marginStart="60dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/myfont"
                android:text="@string/information"
                android:textColor="@color/C2"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/random_song_tv"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                ads:layout_constraintTop_toBottomOf="@id/info_tv"
                ads:layout_constraintStart_toStartOf="@id/nav_view_constrain_layout"
                android:layout_marginStart="60dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/myfont"
                android:text="@string/random_song"
                android:textColor="@color/C2"
                android:textSize="17sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>